# liblloyal

./: .gitattributes  .gitignore  .llama-cpp-version  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE  NOTICE  README.md  SECURITY.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: build-llama.sh  setup-llama-cpp.sh
.github/workflows/: docs.yml  sync-llama-cpp.yml  tests.yml
cmake/templates/: ggml.h.in  llama.h.in
docs/: CMakeLists.txt  PUBLISHING.md  api.md  contracts-verified.md  conversion-plan.md  custom-theme.css  guide.md  header.html.bak  mainpage.dox  production-hardening.md
docs/api/: README.md  header.html
include/lloyal/: boundaries.hpp  branch.hpp  chat_in.hpp  chat_out.hpp  chat_template.hpp  common.hpp  decode.hpp  decoder.hpp  embedding.hpp  grammar.hpp  helpers.hpp  json-schema-to-grammar.hpp  kv.hpp  logits.hpp  mcts.hpp  metrics.hpp  model_registry.hpp  sampler.hpp  tokenizer.hpp
include/lloyal/minja/: chat-template.hpp
scripts/: generate-docs.sh
tests/: .gitignore  CMakeLists.txt  branch_test.cpp  chat_in_test.cpp  chat_out_test.cpp  chat_template_test.cpp  decoder_seq_test.cpp  decoder_test.cpp  embedding_test.cpp  kv_test.cpp  metrics_test.cpp  model_registry_test.cpp  sampler_test.cpp  tokenizer_test.cpp
tests/fixtures/: .gitignore
tests/integration/: behavioral_contract_test.cpp  branch_integration_test.cpp  chat_in_integration_test.cpp  chat_out_integration_test.cpp  chat_template_integration_test.cpp  clear_and_reseed_test.cpp  clear_and_reseed_validation.cpp  contrastive_logits_test.cpp  e2e_parameter_flow_test.cpp  embedding_integration_test.cpp  init_context_test.cpp  kv_file_persistence_test.cpp  kv_pressure_integration_test.cpp  logits_integration_test.cpp  main.cpp  mcts_integration_test.cpp  multi_sequence_integration_test.cpp  rope_position_invariant_test.cpp  sampler_integration_test.cpp  test_config.hpp
tests/lib/: README.md
tests/lib/b6870/llama.xcframework/: Info.plist
tests/lib/b6870/llama.xcframework/ios-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/ios-arm64/llama.framework/: llama
tests/lib/b6870/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/ios-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
tests/lib/b6870/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/macos-arm64_x86_64/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
tests/lib/b6870/llama.xcframework/tvos-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/tvos-arm64/llama.framework/: llama
tests/lib/b6870/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/tvos-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
tests/lib/b6870/llama.xcframework/xros-arm64/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/xros-arm64/llama.framework/: llama
tests/lib/b6870/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/aarch64/: llama.yml
tests/lib/b6870/llama.xcframework/xros-arm64_x86_64-simulator/dSYMs/llama.dSYM/Contents/Resources/Relocations/x86_64/: llama.yml
tests/stubs/: chat.h  common.h  json-schema-to-grammar.h  llama_stubs.cpp  llama_stubs.h  peg-parser.h
tests/stubs/llama/: ggml.h  llama.h
